<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="featheryi.signin.CreateUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/page_marign"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/input_password"
            android:layout_margin="@dimen/line_margin">

            <EditText
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_email"
                android:singleLine="true"
                app:errorEnabled="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/input_password"
            android:layout_margin="@dimen/line_margin">

            <EditText
                android:id="@+id/create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password"
                android:singleLine="true"
                app:errorEnabled="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/input_password"
            android:layout_margin="@dimen/line_margin">

            <EditText
                android:id="@+id/create_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password2"
                android:singleLine="true"
                app:errorEnabled="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_createuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/line_margin"
            android:text="@string/createuser" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
